@@ -1,5 +1,12 @@
 2000-02-09  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/placement.c (PlaceWindow):
+	(PlaceAgain_func):
+	* fvwm/placement.h:
+	* fvwm/add_window.c (setup_window_placement):
+	made PlaceAgain work as documented in the man page
+	fixed bug causing windows to be placed off screen
+
 	* fvwm/menus.c (paint_item):
 	(NewMenuStyle):
 	ActiveColorset doesn't force a hilit background anymore
